--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,3 +14,5 @@ $company-registration-bg: url('/img/company-registration-bg.jpg');
 $sidebar-width: 250px;
 $header-height: 75px;
 $large-input-height: 35px;
+$enable-grid-classes: false;
+$enable-cssgrid: true
